# 1chan_backend

./: .gitignore  README.md
infra/: docker-compose.yml
infra_latest/: docker-compose.yml
services/NotificationService/: DockerFile  pyproject.toml
services/NotificationService/src/: main.py
services/NotificationService/src/api/: dep.py  router.py
services/NotificationService/src/api/v1/: notification.py
services/NotificationService/src/core/: config.py  logger.py  time.py
services/NotificationService/src/lib/: consume.py  db.py  message_queue.py  ws_manager.py
services/NotificationService/src/models/: notifcation.py
services/NotificationService/src/repo/: notification.py
services/NotificationService/src/schema/: notification.py
services/NotificationService/src/service/: notification.py
services/NotificationService/tests/: conftest.py  test_notifications.py
services/PostService/: .dockerignore  DockerFile  pyproject.toml
services/PostService/src/: main.py
services/PostService/src/api/: dep.py  router.py
services/PostService/src/api/v1/: comment.py  post.py  post_manager.py
services/PostService/src/core/: config.py
services/PostService/src/lib/: consume.py  db.py  publish.py  redis.py
services/PostService/src/models/: comment.py  post.py
services/PostService/src/repo/: comment.py  post.py
services/PostService/src/schema/comments/: comment.py
services/PostService/src/schema/posts/: posts.py
services/PostService/src/service/: AsyncClient.py  comment.py  post.py
services/PostService/tests/: conftest.py  test_posts.py
(+48 files in other folders)
